[gd_scene load_steps=6 format=3 uid="uid://hj2d5lhp6jkk"]

[ext_resource type="Script" uid="uid://m0nhlx7skmv5" path="res://features/enemies/Simple_Turret/simple_turret.gd" id="1_315jc"]
[ext_resource type="AudioStream" uid="uid://beaa7hmiw4wya" path="res://features/enemies/Simple_Turret/biggun1.wav" id="2_ub5lw"]

[sub_resource type="CylinderMesh" id="CylinderMesh_m3hh2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_315jc"]
height = 7.16744
radius = 6.606

[sub_resource type="PrismMesh" id="PrismMesh_315jc"]

[node name="SimpleTurret" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.920479, 0)
script = ExtResource("1_315jc")

[node name="Pivot" type="Node3D" parent="."]

[node name="HeadMesh" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.00741757, 0.999972, 0, -0.999972, 0.00741757, 0, 0.666525, 0)
mesh = SubResource("CylinderMesh_m3hh2")

[node name="VisionRayCast" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75292, 0.973569)
target_position = Vector3(0, -1, -50)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="CheatRay" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75292, 0.973569)
target_position = Vector3(0, -1, -50)
debug_shape_custom_color = Color(0.706075, 0.265893, 1, 1)
debug_shape_thickness = 5

[node name="DetectionArea" type="Area3D" parent="."]

[node name="DetectionRadius" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(3, 0, 0, 0, 1.007, 0, 0, 0, 5.164, 0, -0.459854, 0)
shape = SubResource("CylinderShape3D_315jc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PrismMesh_315jc")

[node name="Gun_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ub5lw")
volume_db = -9.802
